--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@ Many thanks again!
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
-	<title>The Evolution of Trust</title>
-	<meta name="description" content="an interactive guide to the game theory of why &amp; how we trust each other"/>
+	<title>Evolutionen af Tillid</title>
+	<meta name="description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta itemprop="name" content="The Evolution of Trust">
-	<meta itemprop="description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta itemprop="name" content="Evolutionen af Tillid">
+	<meta itemprop="description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="The Evolution of Trust">
-	<meta name="twitter:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta name="twitter:title" content="Evolutionen af Tillid">
+	<meta name="twitter:description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta property="og:title" content="The Evolution of Trust">
+	<meta property="og:title" content="Evolutionen af Tillid">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
-	<meta property="og:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta property="og:description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/slides.css?v11">
