--- a/words.html
+++ b/words.html
@@ -43,19 +43,19 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="meta_title">
-The Evolution of Trust
+Evolutionen af Tillid
 </p>
 <p id="meta_desc">
-an interactive guide to the game theory of why &amp; how we trust each other
+en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden
 </p>
 <p id="meta_loading">
-loading...
+indlæser...
 </p>
 <p id="meta_on">
-ON
+TÆNDT
 </p>
 <p id="meta_off">
-OFF
+SLUKKET
 </p>
 
 
@@ -64,29 +64,28 @@ OFF
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="title">
-<span style="font-size:0.75em">THE</span><br>
-EVOLUTION<br>
-<span style="font-size:0.75em">OF TRUST</span>
+<span style="font-size:0.75em"> </span><br>
+EVOLUTIONEN<br>
+<span style="font-size:0.75em">AF TILLID</span>
 </p>
 <p id="subtitle">
 
-playing time: 30 min &#8226; by nicky case, july 2017
+spiltid: 30 min &#8226; by nicky case, july 2017
 
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
-<!--
 <br>
-translated by YOUR NAME HERE
+translated by Vilma Dyhr
 &#8226;
 <a href="http://ncase.me/trust/">original English version</a>
--->
 
+	
 </p>
 
 <p id="loading">
-loading...
+indlæser...
 </p>
 <p id="loading_done">
-PLAY &rarr;
+SPIL &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
