--- a/words.html
+++ b/words.html
@@ -70,11 +70,11 @@ EVOLUTIONEN<br>
 </p>
 <p id="subtitle">
 
-spiltid: 30 min &#8226; by nicky case, july 2017
+spiltid: 30 min &#8226; af nicky case, juli 2017
 
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
 <br>
-translated by Vilma Dyhr
+oversat af Vilma Dyhr
 &#8226;
 <a href="http://ncase.me/trust/">original English version</a>
 
@@ -86,38 +86,37 @@ indlæser...
 </p>
 <p id="loading_done">
 SPIL &rarr;
-</p>
+</p>	
 
 <!-- - - - - - - - - - - - - - - - - -->
 <!-- - - - - - INTRO! - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="intro">
-During World War I, peace broke out.
+Under Første Verdenskrig, brød freden ud.
 <br><br>
 
-It was Christmas 1914 on the Western Front.<br>
-Despite strict orders <i>not</i> to chillax with the enemy, British<br>
-and German soldiers left their trenches, crossed No Man's Land,<br>
-and gathered to bury their dead, exchange gifts, and play games.
+Det var juleaften 1914 på den vestlige front.<br>
+På trods af strenge ordre til <i>ikke</i> at omgås fjenden, forlod<br>
+britiske og tyske soldater deres skyttegrave, krydsede ingenmandsland<br>
+og samledes for at begrave deres døde, uddele gaver, og spille spil 
 <br><br>
 
-Meanwhile: it's 2017, the West has been at peace for decades, and<br>
-wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
-fewer and fewer people say they trust each other. So here's our puzzle:
+Nu er det 2017, vesten har haft fred i årtier, og wow, we <i>stinker</i><br>
+til tiltro. Undersøgelser viser at over de sidste 40 år, siger færre og færre
+at de stoler på hinanden. Så her er vores gåde: <br><br>
+
+<b>Hvorfor, selv i en tid med fred, bliver venner til fjender?<br>
+Og hvorfor, selv i en tid med krig, bliver fjender til venner?</b>
 <br><br>
 
-<b>Why, even in peacetime, do friends become enemies?<br>
-And why, even in wartime, do enemies become friends?</b>
-<br><br>
-
-I think <b>game theory</b> can help explain our epidemic of distrust –<br>
-and how we can fix it! So, to understand all this...
+Jeg tror <b>spilteori</b> kan hjælpe med at forklare vores mistillidsepidemi –<br>
+og hvordan vi fixer det! så, for at forstå alt dette...
 </p>
 <p id="intro_button">
-...let's play a game. &rarr;
+...lad os spille et spil. &rarr;
 </p>
-
+<!-- Det er her jeg er kommet til!! -->
 <!-- - - - - - - - - - - - - - - - - -->
 <!-- - - - - - ONE OFF! - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
