--- a/words.html
+++ b/words.html
@@ -116,93 +116,94 @@ og hvordan vi fixer det! så, for at forstå alt dette...
 <p id="intro_button">
 ...lad os spille et spil. &rarr;
 </p>
-<!-- Det er her jeg er kommet til!! -->
+
 <!-- - - - - - - - - - - - - - - - - -->
 <!-- - - - - - ONE OFF! - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_you_cooperate">
-you<br>cooperate
+du<br>samarbejder
 </p>
 
 <p id="label_you_cheat">
-you<br>cheat
+du<br>snyder
 </p>
 
 <p id="label_they_cooperate">
-they<br>cooperate
+de<br>samarbejder
 </p>
 
 <p id="label_they_cheat">
-they<br>cheat
+de<br>snyder
 </p>
 
 <p id="label_you">
-you<br>↙
+dig<br>↙
 </p>
 <p id="label_them">
-other player<br>↘
+anden spiller<br>↘
 </p>
 
 <p id="oneoff_0_top">
 
-<b>THE GAME OF TRUST</b>
-<br>
-You have one choice.
-In front of you is a machine: if you put a coin in the machine,
-the <i>other player</i> gets three coins – and vice versa.
-You both can either choose to COOPERATE (put in coin), or CHEAT (don't put in coin).
+<b>SPILLET OM TILLID</b>
+<br> 
+Du har et valg.
+Foran dig er en maskine: hvis du putter en mønt i maskinen,
+får den <i>anden spiller</i> tre mønter - og omvendt.
+I kan begge enten vælge at SAMARBEJDE (putte mønten i), eller SNYDE (ikke putte mønten i).
 </p>
 
 <p id="oneoff_0_btm">
-<b>Let's say the other player cheats, and doesn't put in a coin.</b><br>
-What should you do?
+<b>Lad os sige at den anden spiller snyder, og ikke kommer en mønt i.</b><br>
+Hvad skal du så gøre?
 </p>
 
 <p id="oneoff_1_cheated">
-Exactly! Why let that moocher mooch off of you?
+Præcis! Hvorfor give den gnier noget som er dit?
 </p>
 
 <p id="oneoff_1_cooperated">
-Alas, turning the other cheek just gets you slapped!
+Ak, vender du den anden kind til får du bare en lussing!
 </p>
 
 <p id="oneoff_1_top">
-If you cooperate &amp; they cheat, you lose a coin while they gain three. (score: -1 vs +3)
-However, if you both cheat, neither of you gain or lose anything. (score: 0 vs 0)
-<b>Therefore: you should CHEAT.</b>
+Hvis du samarbejder &amp; de snyder, mister du en mønt mens de får tre. (stilling: -1 vs +3)
+Men hvis i begge snyder, vil ingen af jer få eller miste noget. (stilling: 0 vs 0)
+<b>Derfor burde du SNYDE.</b>
 </p>
 
 <p id="oneoff_1_btm">
-<b>But let's say the other player cooperates, and puts in a coin.</b><br>
-What should you do now?
+<b>Men lad os sige at den anden spiller samarbejder, og putter en mønt i.</b><br>
+Hvad skal du så gøre nu?
 </p>
 
 <p id="oneoff_2_cheated">
-Wow, that's mean... and also the correct answer!
+Wow, det er ledt... og også det rigtige svar!
 </p>
 
 <p id="oneoff_2_cooperated">
-Sure, seems like the right thing to do... <b>OR IS IT??</b>
+Det virker som det rigtige at gøre... <b>ELLER ER DET??</b>
 </p>
 
 <p id="oneoff_2_top">
-Because if you both cooperate, you both give up a coin to gain three. (score: +2 vs +2)
-But if you cheat &amp; they cooperate, you gain three coins at their cost of one. (score: +3 vs -1)
-<b>Therefore: you "should" still CHEAT.</b>
+For hvis i begge samarbejder, giver i begge en mønt for at få tre. (stilling: +2 vs +2)
+Men hvis du snyder &amp; de samarbejder, vil du få tre mønter til en pris af deres ene. (stilling: +3 vs -1) 
+<b>Derfor "burde" du stadig SNYDE.</b>
 </p>
 
 <p id="oneoff_2_btm">
-And <i>that's</i> our dilemma.
-Trust is nice, but it can let others take advantage of you -- or shoot you as you come unarmed out of a trench.
-Sometimes, distrust <i>is</i> rational!
-But now, what happens if we play this game...
+Og <i>det</i> er vores dilemma.
+Tillid er fint, men det kan lade andre tage fordel af dig -- eller skyde dig når du kommer uvæbnet ud af en skyttegrav.
+Nogle gange <i>er</i> mistillid fornuftigt!
+Men, hvad sker der så hvis vi spiller det her spil...
 </p>
 
 <p id="oneoff_button_next">
-...more than once? &rarr;
+...mere end én gang? &rarr;
 </p>
 
+<!-- Det er her jeg er kommet til!! -->
 <!-- - - - - - - - - - - - - - - - - -->
 <!-- - - - - - ITERATED - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
