--- a/words.html
+++ b/words.html
@@ -198,6 +198,7 @@ Tillid er fint, men det kan lade andre tage fordel af dig -- eller skyde dig nå
 Nogle gange <i>er</i> mistillid fornuftigt!
 Men, hvad sker der så hvis vi spiller det her spil...
 </p>
+<!-- her går de sidste ord ind under knappen... (The last few words are hidden by the button...)-->
 
 <p id="oneoff_button_next">
 ...mere end én gang? &rarr;
@@ -209,66 +210,66 @@ Men, hvad sker der så hvis vi spiller det her spil...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="iterated_intro_top">
-<b>Now, let's play for real.</b>
-You'll be playing against 5 different opponents, each with their own game "strategy".
-With each opponent, you'll play anywhere between 3 to 7 rounds.
-(You won't know in advance when the last round is)
-Can you trust them? Or rather... can they trust <i>you?</i>
+<b>Lad os pille rigtigt nu.</b>
+Du vil spille mod 5 forskellige modstandere med hver deres "strategi".
+Mod hver modstander vil du spille mellem 3 og 7 runder.
+(Du vil ikke vide i forvejen hvornår den sidste runde er)
+Kan du stole på dem? Eller rettere... kan de stole på <i>dig</i>
 </p>
 
 <p id="iterated_intro_btm">
-Pick your first, <i>real</i> move. <b>Choose wisely.</b>
+Vælg dit første <i>rigtige</i> træk. <b>Vælg klogt.</b>
 </p>
 
 <p id="iterated_info_1">
-opponent: [X] of [Y]
+modstander: [X] af [Y]
 </p>
 </p>
 <p id="iterated_info_2">
-your total score: 
+din samlede score: 
 </p>
 
 <p id="iterated_score_start">
-And your total score is...
+Og din samlede score er...
 </p>
 <p id="iterated_score_1">
-which is, wow, actually <i>impressively</i> bad.
+Hvilket er, wow, faktisk <i>imponerende</i> dårligt.
 </p>
 <p id="iterated_score_2">
-which, uh, could be worse!
+Hvilket, øh, kunne være værre!
 </p>
 <p id="iterated_score_3">
-which ain't bad!
+Hvilet ikke er skidt!
 </p>
 <p id="iterated_score_4">
-which is pretty good!
+Hvilket er ret godt!
 </p>
 <p id="iterated_score_5">
-which is <i>perfect!</i> Congrats you have too much time on your hands.
+Hvilket er <i>perfekt!</i> Tillykke, du har for meget tid på dine hænder.
 </p>
 <p id="iterated_score_x">
-...i have no idea how you did that.
+... jeg har ingen anelse om hvordan du gjorde det. 
 </p>
 <p id="iterated_score_end">
-(the lowest &amp; highest possible scores are 7 and 49, respectively)
+(den laveste &amp; højeste mulige score er henholdsvis 7 og 49) 
 </p>
 
 <p id="who_were">
-So who were these strange characters you just played against?
+Så hvem var disse mærkelige karakterer du lige har spillet imod?
 </p>
 
 <p id="character_tft">
-<b>COPYCAT:</b>
-Hello! I start with Cooperate, and afterwards, I just copy whatever you did in the last round. Meow
+<b>EFTERABER:</b>
+Hej! Jeg starter med at samarbejde og derefter kopierer jeg bare hvad du gjorde i den sidste runde. 
 </p>
 
 <p id="character_all_d">
-<b>ALWAYS CHEAT:</b>
-<i>the strong shall eat the weak</i>
+<b>SNYDER ALTID:</b>
+<i>den stærke skal overgå den svage</i>
 </p>
 
 <p id="character_all_c">
-<b>ALWAYS COOPERATE:</b>
+<b>SAMARBEJDER ALTID:</b>
 Let's be best friends! &lt;3
 </p>
 
