--- a/words.html
+++ b/words.html
@@ -204,7 +204,6 @@ Men, hvad sker der så hvis vi spiller det her spil...
 ...mere end én gang? &rarr;
 </p>
 
-<!-- Det er her jeg er kommet til!! -->
 <!-- - - - - - - - - - - - - - - - - -->
 <!-- - - - - - ITERATED - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
@@ -264,34 +263,42 @@ Hej! Jeg starter med at samarbejde og derefter kopierer jeg bare hvad du gjorde 
 </p>
 
 <p id="character_all_d">
-<b>SNYDER ALTID:</b>
+<b>SNYDER:</b>
 <i>den stærke skal overgå den svage</i>
 </p>
 
 <p id="character_all_c">
-<b>SAMARBEJDER ALTID:</b>
-Let's be best friends! &lt;3
+<b>SAMARBEJDER:</b>
+Lad os være bedstevenner! &lt;3
 </p>
 
 <p id="character_grudge">
-<b>GRUDGER:</b>
+<b>HÆVNER:</b>
 Listen, pardner. I'll start cooperatin', and keep cooperatin',
 but if y'all ever cheat me, I'LL CHEAT YOU BACK 'TIL THE END OF TARNATION.
+Hør her partner. Jeg vil starte med a' samarbejde, og vil fortsætte såd'n, men hvis du nogensinde 
+snyder mig VIL JEG SNYDE DIG IGEN TIL SLUTNINGEN AF ???
 </p>
+<!--Jeg arbejder på det...-->
 
 <p id="character_prober">
-<b>DETECTIVE:</b>
-First: I analyze you. I start: Cooperate, Cheat, Cooperate, Cooperate.
-If you cheat back, I'll act like <span class="tft">Copycat</span>.
-If you never cheat back, I'll act like <span class="all_d">Always Cheat</span>, to exploit you.
-Elementary, my dear Watson.
+<b>DETEKTIV:</b>
+Først: analyserer jeg dig. Jeg starter med: Samarbejde, Snyd, Samarbejde, Samarbejde.
+Hvis du snyder igen, vil jeg opføre mig ligesom <span class="tft">Copycat</span>.
+Hvis du aldrig snyder igen, vil jeg opføre mig ligesom <span class="all_d">Always Cheat</span>, for at udnytte dig.
+Simpelt, kære Watson.
 </p>
 
+<!-- First: I analyze you. I start: Cooperate, Cheat, Cooperate, Cooperate.
+If you cheat back, I'll act like <span class="tft">Copycat</span>.
+If you never cheat back, I'll act like <span class="all_d">Always Cheat</span>, to exploit you.
+Elementary, my dear Watson. -->
+
 <p id="characters_teaser">
-Now, what if these characters were to play...
+Hvad så hvis disse karakterer skulle spille...
 </p>
 <p id="characters_button">
-...against each other? &rarr;
+...mod hinanden? &rarr;
 </p>
 
 
@@ -300,104 +307,105 @@ Now, what if these characters were to play...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="place_your_bets">
-It's tournament time!
-Each character will now play against every other character:
-that's 10 paired matches, and 10 rounds per match.
+Det er turneringstid!
+Hver karakter vil nu spille mod alle de andre karakterer:
+Det er 10 kampe med 10 runder per kamp.
 <br><br>
-Who do you think will get the highest <i>total</i> score?
-<b>Think carefully about it... and then
-PLACE YOUR BETS:</b>
+Hvem tror du vil få den højeste <i>samlede</i> score?
+<b>Tænk dig godt om... og så
+PLACER DIT BUD:</b>
 </p>
 
 <p id="tournament_intro">
-Alright, you placed your bet on [CHAR]!
-Let's go through the matches one by one, and see how the tournament plays out...
+Okay, du satsede på [CHAR]!
+Lad os gå igennem kampene en efter en, og se hvordan turneringen står...
 </p>
 
 <p id="first_match">
-first match &rarr;
+første kamp &rarr;
 </p>
 
 <p id="next_match">
-next match &rarr;
+næste kamp &rarr;
 </p>
 
 <p id="match_header_1">
-<b>Match #[N]:</b> [A] vs [B]
+<b>Kamp #[N]:</b> [A] vs [B]
 </p>
 <p id="match_header_2">
-<b>Rounds:</b>
+<b>Runder:</b>
 </p>
 <p id="match_header_3">
-<b>Total Scores:</b> [A] vs [B]
+<b>Samlede Scorer:</b> [A] vs [B]
 </p>
 
 <p id="tournament_1">
-Oh, by the way...
+Oh, forresten...
 </p>
 <p id="tournament_2">
-...You may be skeptical about that Christmas Truce story about the World War I trenches.
-Surely that was just a fluke?
+...Du er måske skeptisk omkring den der Jule-freds-historie omkring første verdenskrigs skyttegraverne.
+Det var vel bare et lykketræf?
 </p>
 <p id="tournament_3">
-Yes, the truce was dramatic, but it was <i>neither unique, nor unusual</i>.
+Ja, våbenstilstanden var dramatisk, men det var <i>hverken unikt eller uset</i>
 </p>
 <p id="tournament_4">
-Not <i>every</i> trench joined in the peace, but it was pretty widespread.
-Many front-lines came up with the idea independently, and again: <i>despite</i> specific, strict orders not to.
+Ikke <i>alle</i> skytterne deltog i frden, men det var ret udbredt.
+Mange af frontlinjerne kom selv på ideen, og igen: <i>på trods af</i> specifikke, strenge ordrer imod det.
 </p>
 <p id="tournament_5">
-And in fact, even <i>before</i> Christmas, several front-lines already <i>had</i>
-established an unofficial, secret peace.
+Faktisk, selv <i>før</i> juleaften, havde adskillige af fronrlinjerne <i>allerede</i>
+etableret en uofficiel, hemmelig fredsaftale.
 </p>
 <p id="tournament_6">
-They called it: <b>the "live and let live" system.</b>
-Basically, you don't shoot me, I don't shoot you. And this worked, in a lot of places!
+De keldte det: <b>"lev og lad leve" systemet.</b>
+i bund og grund: hvis du ikke skyder mig, skyder jeg ikke dig. Og dette virkede mange steder!
 </p>
 <p id="tournament_7">
-You may still be skeptical. Most soldiers don't spontaneously form peace with the enemy.
-What's so special about <i>trench</i> warfare? 
+Du er måske stadig skeptisk. De fleste soldater laver ikke bare spontant fred med fjenden.
+Hvad er så specielt med <i>skyttegravs</i>krige?
+	
 </p>
 <p id="tournament_8">
-Well, here's what's unique about the trenches:
-unlike almost every other form of war,
-you have to face the same <i>specific soldiers</i> every day.
+Tjo altså, her er hvad der er unikt med skyttegravene:
+I modsætningen til enhver anden form for krig,
+skal man stå mod de samme <i>specifikke soldater</i> hver dag.
 </p>
 <p id="tournament_9">
-<b>It's a repeated game.</b> And that makes <i>all</i> the difference.
+<b>Det er et gentaget spil.</b> Og det er hvad der gør <i>hele</i> forskellen.
 </p>
 <p id="tournament_10">
-Anyway. And the winner is...
+Uanset hvad. Vinderen er...
 </p>
 
 <p id="the_winner_is">
-(drumroll please...) &rarr;
+(trommehvirvel tak...) &rarr;
 </p>
 
 <p id="tournament_winner_1">
-<b class="tft">COPYCAT!</b>
+<b class="tft">EFTERABEREN!</b>
 </p>
 <p id="tournament_winner_2_yay">
-Congrats, you placed your bet on the right horse.
+Tillykke, du bød på den rigtige hest.
 </p>
 <p id="tournament_winner_2_nay">
-(Apologies to your bet, [CHAR].)
+(Undskyldninger til dit bud, [CHAR].)
 </p>
 <p id="tournament_winner_3">
-<span class="tft">Copycat</span> goes by many names.
-The Golden Rule, reciprocal altruism, tit for tat, or... <b>live and let live.</b>
-That's why "peace" could emerge in the trenches of World War I:
-when you're forced to play the same game with the
-same <i>specific people</i> (not just the same generic "enemy") over and over again --
-<span class="tft">Copycat</span> doesn't just win the battle, it wins the war.
+<span class="tft">Copycat</span> har mange navne.
+Den Gyldne Regl, reciprocal altruisme, dit for dat, eller... <b>lev og lad leve.</b>
+Det er sådan "fred" kunne herske i skyttegravene under 1. verdenskrig:
+Når du er tvunget til at spille det samme spil med de
+samme <i>specifikke personer</i> (ikke bare den samme fælles "fjende") igen og igen --
+<span class="tft">Copycat</span> vinder ikke blot kampen, den vinder krigen.
 <br><br>
-But if things change a lot when you play multiple rounds of the same game, what if we play...
+Men hvis ting ændrer sig meget når du spiller flere runder af det samme spil, hvad så hvis vi spiller...
 </p>
 <p id="tournament_teaser">
-...multiple <i>tournaments?</i> &rarr;
+...flere <i>turneringer</i> &rarr;
 </p>
 
-
+<!-- Det er her jeg er kommet til!! -->
 <!-- - - - - - - - - - - - - - - - - -->
 <!-- - - - - EVOLUTION! - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
