--- a/words.html
+++ b/words.html
@@ -411,7 +411,7 @@ Men hvis ting ændrer sig meget når du spiller flere runder af det samme spil, 
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="evolution_intro">
-Now, let's let our population of players <i>evolve over time</i>. It's a 3-step dance:
+Lad os nu lade vores spillere <i>udvikle sig over tid</i>. Det er en 3-trins dans:
 </p>
 <p id="evolution_intro_1">
 <b>1. PLAY A TOURNAMENT</b><br>
