--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Many thanks again!
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
-	<title>Evolutionen af Tillid</title>
+	<title>Spillet om Tillid</title>
 	<meta name="description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
@@ -35,20 +35,20 @@ Many thanks again!
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta itemprop="name" content="Evolutionen af Tillid">
+	<meta itemprop="name" content="Spillet om Tillid">
 	<meta itemprop="description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Evolutionen af Tillid">
+	<meta name="twitter:title" content="Spillet om Tillid">
 	<meta name="twitter:description" content="en interaktiv guide til spilteorien af hvorfor &amp; hvordan vi stoler på hinanden">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta property="og:title" content="Evolutionen af Tillid">
+	<meta property="og:title" content="Spillet om Tillid">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
@@ -70,8 +70,8 @@ Many thanks again!
 	<div style="display:none" id="footer">
 		<div id="sound" sound="on" class="no-select">
 			<div id="sound_icon"></div>
-			<div id="sound_on">ON</div> <!-- TRANSLATE THIS -->
-			<div id="sound_off">OFF</div> <!-- TRANSLATE THIS -->
+			<div id="sound_on">SLUK</div> <!-- TRANSLATE THIS -->
+			<div id="sound_off">TÆND</div> <!-- TRANSLATE THIS -->
 		</div>
 		<div id="select"></div>
 
@@ -108,9 +108,9 @@ Many thanks again!
 			<a href="https://yaroslav-f.github.io/trust/">Українська</a> &middot;
 			<a href="http://ncase.me/trust-bg/">български език</a> &middot;
 			<a href="https://nghiatt90.github.io/trust-vn/">Tiếng Việt</a> &middot;
-			<a href="https://osori.github.io/trust-ko/">한국어</a> &middot; 
+			<a href="https://osori.github.io/trust-ko/">한국어</a> &middot;
 			<a href="https://htlife.github.io/trust_jp/">日本語</a> &middot;
-			<a href="https://sekai.co/trust/">中文（简体）</a> &middot; 
+			<a href="https://sekai.co/trust/">中文（简体）</a> &middot;
 			<a href="https://audreyt.github.io/trust-zh-TW/">中文（臺灣）</a>	 &middot;
 			<a href="https://hamed.github.io/trust/">فارسی</a> &middot;
 			<a href="https://mudaraljundi.github.io/trust/">العربية</a>
