Add Github Pages site for Danish translation

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ Many thanks again!
 
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, change "link" to whatever the link for the translated version will be! -->
-		<sharing title="The Evolution of Trust"
-				 text="People no longer trust each other. Why? And how can we fix it? An interactive guide to the game theory of trust:"
-				 link="http://ncase.me/trust/"></sharing>
+		<sharing title="Udvikling af Tillid"
+                                 text="Mennesker har ikke længere tillid til hinanden. Hvorfor? Spilteori om Tillid: En Interaktiv Guide"
+				 link="https://mok0.github.io/trust/"></sharing>
 
 		<!-- List of translations thus far! -->
 		<div id="translations">
@@ -88,7 +88,8 @@ Many thanks again!
 			<a href="https://ccamara.github.io/trust/">Español de España</a> &middot;
 			<a href="https://maeriens.github.io/trust/">Español Latino</a> &middot;
 			<a href="https://ayowel.github.io/trust/">Français</a> &middot;
-			<a href="https://jkoelling.github.io/trust/">Deutsch</a> &middot;
+                        <a href="https://mok0.github.io/trust/">Danish</a> &middot;
+                        <a href="https://jkoelling.github.io/trust/">Deutsch</a> &middot;
 			<a href="https://lvdt.github.io/trust/">Italiano</a> &middot;
 			<a href="http://trust.alicedarner.se/">Svenska</a> &middot;
 			<a href="https://rayraz.github.io/trust/">Nederlands</a> &middot;
@@ -111,7 +112,7 @@ Many thanks again!
 			<a href="https://osori.github.io/trust-ko/">한국어</a> &middot;
 			<a href="https://htlife.github.io/trust_jp/">日本語</a> &middot;
 			<a href="https://sekai.co/trust/">中文（简体）</a> &middot;
-			<a href="https://audreyt.github.io/trust-zh-TW/">中文（臺灣）</a>	 &middot;
+			<a href="https://audreyt.github.io/trust-zh-TW/">中文（臺灣）</a> &middot;
 			<a href="https://hamed.github.io/trust/">فارسی</a> &middot;
 			<a href="https://mudaraljundi.github.io/trust/">العربية</a>
 		</div>
