Fix translation in credits page.

--- a/words.html
+++ b/words.html
@@ -1076,11 +1076,11 @@ Publiceret i <i>The Illustrated London News</i>, 9. januar 1915.
 
 skabt af:<br>
 <span class="big">NICKY CASE</span><br>
-<a href="http://ncase.me/" target="_blank">spil mine andre sager</a>
+<a href="http://ncase.me/" target="_blank">spil mine andre spil</a>
 •
 <a href="https://twitter.com/ncasenmare" target="_blank">følg mine pip</a>
 <br>
-<a href="https://github.com/ncase/trust/#play-it-here-httpncasemetrust" target="_blank">download the music &amp; source code</a>
+<a href="https://github.com/ncase/trust/#play-it-here-httpncasemetrust" target="_blank">download musik &amp; kildekode</a>
 
 <span class="divider"></span>
 
